--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
       "@oclif/plugin-help"
     ]
   },
-  "repository": "Projects/sfdx-secrets",
+  "repository": "tehnrd/sfdx-secrets",
   "scripts": {
     "build": "tsc -p .",
     "lint": "eslint src/**/*.ts test/**/*.ts",
